fix to support running on windows